globus-xio (4.8-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Sat, 19 Apr 2014 16:24:10 -0400

globus-xio (4.7-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Sat, 19 Apr 2014 15:02:44 -0400

globus-xio (4.6-1+gt6.@distro@) @distro@; urgency=low

  * Make sure IOV_MAX equivalent is figured out

 -- Globus Toolkit <support@globus.org>  Sat, 19 Apr 2014 11:18:00 -0400

globus-xio (4.5-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:30 -0400

globus-xio (4.4-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:57 -0400

globus-xio (4.4-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:42 -0500

globus-xio (4.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 14:33:51 -0500

globus-xio (4.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix test case

 -- Globus Toolkit <support@globus.org>  Fri, 07 Feb 2014 22:00:49 -0500

globus-xio (4.0-1+gt6.@distro@) @distro@; urgency=low

  * Remove GPT

 -- Globus Toolkit <support@globus.org>  Fri, 13 Dec 2013 13:41:08 -0600

globus-xio (3.8-1) unstable; urgency=low

  * Fix hang on large GETs

 -- Globus Toolkit <support@globus.org>  Fri, 13 Dec 2013 13:41:08 -0600

globus-xio (3.7-1) unstable; urgency=low

  * Fixes related to HTTP client support in GridFTP

 -- Globus Toolkit <support@globus.org>  Thu, 12 Dec 2013 17:27:12 -0600

globus-xio (3.6-1) unstable; urgency=low

  * GT-445: Doxygen fixes

 -- Globus Toolkit <support@globus.org>  Thu, 10 Oct 2013 13:27:45 -0400

globus-xio (3.5-1) unstable; urgency=low

  * Fix wrapblock drivers losing attrs
