@@ -1,3 +1,9 @@
+globus-xio (4.9-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Thu, 24 Apr 2014 10:43:05 -0400
+
 globus-xio (4.8-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
